Fixed problem with section six on Firefox

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -563,7 +563,6 @@ h4 {
 \*=====================*/
 
 #sixth {
-    display: table;
     color: white;
     height: 450px;
     width: 100%;
@@ -571,11 +570,11 @@ h4 {
 
 #sixth .left {
     width: 50%;
-    height: 100%;
+    height: 350px;
     background-color: #cf2424;
     border-right: 1px solid white;
     padding-left: 10%;
-    padding-top: 120px;
+    padding-top: 100px;
 }
 
 #sixth .left * {
